<resources>
    <string name="app_name">Find Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="subscription">Subscription</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_disable">Your Device\'s GPS is Disable</string>
    <string name="gps_status">GPS Status</string>
    <string name="gps_on">GPS ON</string>
    <string name="cancel">Cancel</string>
    <string name="you_should_to_choose_a_food">you should to choose a food</string>
    <string name="you_are_canceled_this_order">you are canceled this order</string>
    <string name="state">State</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="checkemail">Please check your email</string>
</resources>
